Removing duplication of parameters
